--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -77,12 +77,12 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
 <body>
   <div class="signup">
 	<h1>Sign up</h1>
-    <form method="post">
-    	<input type="text" name="u" placeholder="Name" required="required" />
-    	<input type="text" name="u" placeholder="Email" required="required" />
-        <input type="password" name="p" placeholder="Password" required="required" />
-        <input type="password" name="p" placeholder="Re-type Password" required="required" />
-        <a type="submit" class="btn btn-primary btn-block btn-large" href="">Sign up</a>
+    <form th:action="@{/signup/add}" >
+    	<input type="text" name="firstName" placeholder="First Name" required="required" />
+    	<input type="text" name="lastName" placeholder="Last Name" required="required" />
+    	<input type="text" name="email" placeholder="Email" required="required" />
+        <input type="password" name="password" placeholder="Password" required="required" />
+        <input type="submit" class="btn btn-primary btn-block btn-large" value="Sign up"/>
     </form>
 </div>
   
