--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -4,7 +4,7 @@
 <head>
   
   <title>Sign Up Form</title>
-  
+   <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   
 
   
@@ -84,9 +84,12 @@ input:focus { box-shadow: inset 0 -5px 45px rgba(100,100,100,0.4), 0 1px 1px rgb
         <input type="password" name="password" placeholder="Password" required="required" />
         <input type="submit" class="btn btn-primary btn-block btn-large" value="Sign up"/>
     </form>
-</div>
+  </div>
   
-    <script  src="js/index.js"></script>
+  <script>
+  <!--need to write js to check email and password -->
+  </script>
+
 
 </body>
 </html>
