--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -9,9 +9,10 @@
 
 
 
-
-<input type="text" name="username" placeholder = "search"/>
+<form name="usersearch" action="/carDrive/homepage/searchresults" method="#">
+<input type="text" name="q" placeholder = "search"/>
 <button> Enter </button>
+</form>
 
 
 
