--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -4,6 +4,14 @@
 <head>
     <!-- <meta charset="UTF-8"> -->
     <title>User Index</title>
+    <style>
+        -moz-column-count: 5;
+        -moz-column-gap: 40px;
+        -webkit-column-count: 5;
+        -webkit-column-gap: 40px;
+        column-count: 5;
+        column-gap: 40px;
+    </style>
 </head>
 <body>
 <div class="show-user">
@@ -21,6 +29,13 @@
             <td th:text="${user.lastName}"></td>
             <td th:text="${user.firstName}"></td>
             <td th:text="${user.email}"></td>
+            <td>
+                <form action="#" th:action="@{'/user/remove/{id}'(id=${user.id})}" th:method="delete" >
+                    <input type="hidden" name="_method" value="delete" />
+                    <button type="submit" id="submitButton">Remove</button>
+                </form>
+                <!-- <form th:object="${user}" th:action="@{user/remove}" th:method="delete"/> -->
+            </td>
         </tr>
     </table>
 
