--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -1,47 +1,75 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+	xmlns:th="http://www.thymeleaf.org">
 <head>
-    <!-- <meta charset="UTF-8"> -->
-    <title>User Index</title>
-    <style>
-        -moz-column-count: 5;
-        -moz-column-gap: 40px;
-        -webkit-column-count: 5;
-        -webkit-column-gap: 40px;
-        column-count: 5;
-        column-gap: 40px;
-    </style>
+<!-- <meta charset="UTF-8"> -->
+<title>User Index</title>
+<style>
+-moz-column-count
+:
+ 
+5;
+-moz-column-gap
+:
+ 
+40
+px
+;
+
+        
+-webkit-column-count
+:
+ 
+5;
+-webkit-column-gap
+:
+ 
+40
+px
+;
+
+        
+column-count
+:
+ 
+5;
+column-gap
+:
+ 
+40
+px
+;
+</style>
 </head>
 <body>
-<div class="show-user">
+	<div class="show-user">
 
-    <h1>User List</h1>
-    <table class="table table-striped">
-        <tr>
-            <th>Id</th>
-            <th>Last Name</th>
-            <th>First Name</th>
-            <th>Email</th>
-        </tr>
-        <tr th:each="user: ${users}">
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.lastName}"></td>
-            <td th:text="${user.firstName}"></td>
-            <td th:text="${user.email}"></td>
-            <td>
-                <form action="#" th:action="@{'/user/remove/{id}'(id=${user.id})}" th:method="delete" >
-                    <input type="hidden" name="_method" value="delete" />
-                    <button type="submit" id="submitButton">Remove</button>
-                </form>
-                <!-- <form th:object="${user}" th:action="@{user/remove}" th:method="delete"/> -->
-            </td>
-        </tr>
-    </table>
+		<h1>User List</h1>
+		<table class="table table-striped">
+			<tr>
+				<th>Id</th>
+				<th>Last Name</th>
+				<th>First Name</th>
+				<th>Email</th>
+			</tr>
+			<tr th:each="user: ${users}">
+				<td th:text="${user.id}"></td>
+				<td th:text="${user.lastName}"></td>
+				<td th:text="${user.firstName}"></td>
+				<td th:text="${user.email}"></td>
+				<td>
+					<form action="#" th:action="@{'/user/remove/{id}'(id=${user.id})}"
+						th:method="delete">
+						<input type="hidden" name="_method" value="delete" />
+						<button type="submit" id="submitButton">Remove</button>
+					</form> <!-- <form th:object="${user}" th:action="@{user/remove}" th:method="delete"/> -->
+				</td>
+			</tr>
+		</table>
 
-</div>
+	</div>
 
-<script  src="js/index.js"></script>
+	<script src="js/index.js"></script>
 
 </body>
 </html>
