Employee Search Bar
Employee Search Bar

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -115,10 +115,11 @@
 				<div class="searchtxt">
 					<h1>SEARCH TEXT</h1>
 				</div>
-				<form class="navbar-form navbar-left searchformmargin" role="search">
+				<form class="navbar-form navbar-left searchformmargin" action = "/homepage/redirect" role="search">
 					<div class="form-group">
-						<input type="text" class="form-control searchform" placeholder="Enter Keyword"/>
+						<input type="text"  class="form-control searchform" placeholder="Enter Keyword"/>
 					</div>
+					<button class="searchbutton"><span class="glyphicon glyphicon-search "></span></button>
 				</form>
 				<ul class="nav navbar-nav navbarborder">
 					<li class="li-category">
