--- a/src/main/resources/templates/bam.html
+++ b/src/main/resources/templates/bam.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 	<div class="show-user">
-		<h1>Database</h1>
+		<h1>Vehicle Search Results</h1>
 		<table class="table table-striped">
 			<th>VIN</th>
 			<th>Make</th>
@@ -15,7 +15,7 @@
 			<th>Year</th>
 			<th>Price</th>
 			<th>MPG</th>
-			<th>COLOR</th>
+			<th>Color</th>
 
 			<tr th:each="vehicle: ${vehicles}">
 				<td th:text="${vehicle.vin}"></td>
@@ -25,9 +25,9 @@
 				<td th:text="${vehicle.price}"></td>
 				<td th:text="${vehicle.mpg}"></td>
 				<td th:text="${vehicle.color}"></td>
-
-
 			</tr>
+
+			<button>Sort By</button>
 		</table>
 	</div>
 
