--- a/src/main/resources/static/css/entry.css
+++ b/src/main/resources/static/css/entry.css
@@ -151,7 +151,7 @@ body {
 		endColorstr='#092756', GradientType=1);
 }
 
-.login {
+.css {
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -160,7 +160,7 @@ body {
 	height: 300px;
 }
 
-.login h1 {
+.css h1 {
 	color: #fff;
 	text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 	letter-spacing: 1px;
