--- a/src/main/resources/templates/carEntry.html
+++ b/src/main/resources/templates/carEntry.html
@@ -7,7 +7,7 @@
     <title>Car Entry</title>
 </head>
 <body>
-<div class="enter-vehicle">
+<div class="css">
     <h1>Add Car</h1>
     <form th:action="@{/carAdd}">
         <input type="text" name="vin" placeholder="Vin" required="required" />
