--- a/src/main/resources/templates/motorcycleEntry.html
+++ b/src/main/resources/templates/motorcycleEntry.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css/entry.css"/>
 </head>
 <body>
-<div class="enter-vehicle">
+<div class="css">
     <h1>Add Car</h1>
     <form th:action="@{/motorcycleAdd}">
         <input type="text" name="vin" placeholder="Vin" required="required" />
