--- a/src/main/resources/templates/vehicleEntry.html
+++ b/src/main/resources/templates/vehicleEntry.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div class="enter-vehicle">
+<div class="css">
     <h1>Add Vehicle</h1>
     <a href="/carEntry" class="btn btn-primary btn-block btn-large">
         Car</a>
