Added name title to Featured Cars
Added name title to Featured Cars

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -153,10 +153,10 @@
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 txt1colon ">
 						<div class="featurecontant">
-							<h1>LOREM IPSUM</h1>
-							<p>"Lorem ipsum dolor sit amet, consectetur ,<br/>
-								sed do eiusmod tempor incididunt </p>
-							<h2>Price &euro;</h2>
+							<h1>Porsche</h1>
+							<p>"Fully restored,<br/>
+								classic beauty </p>
+							<h2>&dollar;75,000</h2>
 							<button id="btnRM" onclick="rmtxt()">READ MORE</button>
 							<div id="readmore">
 								<h1>Car Name</h1>
@@ -179,10 +179,10 @@
 					</div>
 					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 txt1colon ">
 						<div class="featurecontant">
-							<h1>LOREM IPSUM</h1>
-							<p>"Lorem ipsum dolor sit amet, consectetur ,<br/>
-								sed do eiusmod tempor incididunt </p>
-							<h2>Price &euro;</h2>
+							<h1>Porsche 911</h1>
+							<p>"An original porsche with original parts, <br/>
+								fully restored" </p>
+							<h2>&dollar;95,000</h2>
 							<button id="btnRM2">READ MORE</button>
 							<div id="readmore2">
 								<h1>Car Name</h1>
