Toyota Image Missing Link Fixed
Toyota Image Missing Link Fixed

--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -80,7 +80,7 @@
 				<img src="image/tesla.jpg" alt="oldcar"/>
 				<div class="carousel-caption">
 					<h2>Tesla</h2>
-					<p>Clean, Affordable<br/>
+					<p>Clean, Affordable,<br/>
 						Reliable </p>
 				</div>
 			</div>
@@ -95,7 +95,7 @@
 				<img src="image/Toyota.jpg" alt="benz"/>
 				<div class="carousel-caption">
 					<h2>Toyota</h2>
-					<p>Safety </p>
+					<p>Safety Redefined </p>
 				</div>
 			</div>
 		</div>
