--- a/src/main/resources/templates/motorcycleEntry.html
+++ b/src/main/resources/templates/motorcycleEntry.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="css">
-    <h1>Add Car</h1>
+    <h1>Add MotorCycle</h1>
     <form th:action="@{/motorcycleAdd}">
         <input type="text" name="vin" placeholder="Vin" required="required" />
         <input type="text" name="make" placeholder="Make" required="required" />
